<resources>
    <string name="app_name">MuscleHack</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cycle_tracker_title">THT Workout Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="cycle_tracker_drawer">THT Workout Tracker</string>
    <string name="exercise_bank_drawer">Exercise Bank</string>
    <string name="training_manual_drawer">THT Training Manual</string>
    <string name="videos_drawer">Videos</string>
    <string name="products_drawer">Paid Products</string>
    <string name="hire_mark_drawer">Hire Mark</string>
    <string name="social_media_drawer">Social Media</string>
    <string name="settings_drawer">Settings</string>
    <string name="hello_world">Hello World!</string>
    <string name="hint">Enter set note here</string>
    <string name="title_activity_settings">Settings</string>
    <string name="alarm_permission_title">Enable Rest Timer Alarms</string>
    <string name="alarm_permission_message">To provide accurate rest timer notifications during your workouts, this app needs permission to schedule exact alarms. This ensures you get notified precisely when your rest period is over.\n\nTap \"Settings\" to grant permission.</string>
    <string name="alarm_permission_settings">Settings</string>
    <string name="alarm_permission_cancel">Cancel</string>
    <string name="rest_timer_setup_title">Rest Timer Setup</string>
    <string name="rest_timer_setup_message">Rest timers help you maintain optimal training intensity by alerting you when rest periods are complete.\n\nTo ensure accurate notifications, we need permission to schedule precise alarms. This is only used for workout rest timers.</string>
    <string name="rest_timer_setup_enable">Enable Timers</string>
    <string name="rest_timer_setup_skip">Skip for Now</string>
    <string name="timer_permission_denied_title">Timer Permission Required</string>
    <string name="timer_permission_denied_message">Rest timers require exact alarm permission to work accurately. Without this permission, timer notifications may be delayed or unreliable.\n\nYou can enable this in Settings > Apps > MuscleHack > Permissions.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based
    on your message history
  </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_create_new_cycle">CreateNewCycleActivity</string>
    <string name="blank_cycle_template">Blank workout</string>
    <string name="five_day_split_template">THT 5-day split workout</string>
    <string name="three_day_full_body_template">THT 3-day full body workout (start here if new to THT training)</string>
    <string name="three_day_split_template">THT 3-day abbreviated version of the 5-day split (only use if you don’t have time to go to the gym 5 days/wk)</string>
    <string name="create_cycle_hint">Enter new training cycle name</string>
    <string name="name_your_cycle">Give your training cycle a name:</string>
    <string name="choose_template">Choose a pre-made training cycle or create your own: </string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="toast">This is a toast</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_cycle_title">Are you sure you want to delete </string>
    <string name="question_mark">\?</string>
    <string name="title_activity_create_new_workout">Create a new workout routine</string>
    <string name="add_workout">Add workout</string>
    <string name="workout_name_prompt">Give your workout a name:</string>
    <string name="workout_repeats_prompt">How many times will you do this workout per week?</string>
    <string name="how_many_weeks">How many weeks will your training cycle last?</string>
    <string name="edit_sets">Edit</string>
    <string name="title_activity_edit_sets">EditSetsActivity</string>
    <string name="title_activity_exercise_bank_overlay">ExerciseBankOverlayActivity</string>
    <string name="title_activity_create_new_set">CreateNewSetActivity</string>
    <string name="custom_or_bank_text">Select an exercise from the exercise bank or enter a custom name:</string>
    <string name="min_reps_text">Minimum repetitions:</string>
    <string name="max_reps_text">Maximum repetitions:</string>
    <string name="rest_time_text">Rest time (seconds):</string>
    <string name="exercise_bank_button_text">Choose from Exercise Bank</string>
    <string name="change_cycle_duration">Change training cycle duration</string>
    <string name="change_duration">Change duration</string>
    <string name="prev_weight">Prev. weight:</string>
    <string name="cur_weight">New weight:</string>
    <string name="prev_reps">Prev. reps:</string>
    <string name="cur_reps">New reps:</string>
    <string name="dash">-</string>
    <string name="rest_time">Rest:</string>
    <string name="reps">reps</string>
    <string name="monday_day_name">Monday</string>
    <string name="friday_day_name">Friday</string>
    <string name="sec">sec.</string>
    <string name="rep_range">Rep range:</string>
    <string name="one_repeat_per_week">Once per week</string>
    <string name="two_repeats_per_week">Twice per week</string>
    <string name="x_repeats_per_week">%s times per week</string>
    <string name="rename_cycle">Rename training cycle</string>
    <string name="rename_workout">Rename workout</string>
    <string name="choose_default_rep_range">Choose a default rep range:</string>
    <string name="_6_to_8_reps">6 to 8 reps per set</string>
    <string name="_8_to_12_reps">8 to 12 reps per set (use if new to THT)</string>
    <string name="sort">Sort</string>
    <string name="enter_num_weeks">Enter how many weeks your training cycle will last:</string>
    <string name="enter_the_rep_range_for_this_set">Enter the rep range for this set:</string>
    <string name="enter_rep_range">Enter rep range:</string>
    <string name="never_used">Never used</string>
    <string name="done_button">DONE</string>
    <string name="monday_and_friday">Monday and Friday Workout</string>
    <string name="monday">Monday Workout</string>
    <string name="tuesday">Tuesday Workout</string>
    <string name="wednesday">Wednesday Workout</string>
    <string name="thursday">Thursday Workout</string>
    <string name="friday">Friday Workout</string>
    <string name="products_title">Premium Products</string>
    <string name="blog_title">Blog</string>
    <string name="training_manual_title">Training Manual</string>
    <string name="exercise_added_to_bank">Custom exercise %s added to Exercise Bank.</string>
    <string name="last_used">Last trained </string>
    <string name="delete_icon">Delete icon</string>
    <string name="options_icon">Options icon</string>
    <string name="added_by_user_header">Added by user</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="settings">Settings</string>
    <string name="enter_new_rest_time">Enter new rest time:</string>
    <string name="exercise_bank_info_1">If and when you want to change an exercise, (or you just don\'t have the equipment for a certain movement) simply locate that exercise here in the bank.</string>
    <string name="exercise_bank_info_2">Every other exercise that is in the same category is a suitable replacement.</string>
    <string name="exercise_bank_info_3">Select any exercise to see a tutorial.</string>
    <string name="creating_cycle_title">Creating training cycle %s</string>
    <string name="saturday">Saturday</string>
    <string name="total_six_pack_abs">Total Six Pack Abs</string>
    <string name="cycle_completion_message">Congrats - You just stimulated growth with THT Training! Now go eat and rest.</string>
    <string name="tabs_day_header">Week %s</string>
    <string name="exercise_bank_info_header">How to use the Exercise Bank</string>
    <string name="social_media">Connect with Mark</string>
    <string name="become_an_affiliate">Become a MuscleHack affiliate</string>
    <string name="default_notification_channel_id">CHANNEL_ID</string>
    <string name="default_notification_channel_name">CHANNEL_NAME</string>
    <string name="substitute_exercise">Substitute exercise</string>
    <string name="skip_this_day">Skip this day</string>
    <string name="skip_day_dialog_header">Skip Week %s?</string>
    <string name="skip_day_dialog_header_with_repeats">Skip wWeek %s?</string>
    <string name="about">About</string>
    <string name="navigation_products_text">Premium</string>
    <string name="musclehack_on_twitter">MuscleHack on Twitter</string>
    <string name="musclehack_on_instagram">MuscleHack on Instagram</string>
    <string name="musclehack_on_facebook">MuscleHack on Facebook</string>
    <string name="skip_exercise">Skip exercise</string>
    <string name="undo_skip_exercise">Undo skip exercise</string>
    <string name="see_exercise_tutorial">See exercise tutorial</string>
    <string name="exercise_name_hint">Exercise name</string>
    <string name="exercise_bank_title">Exercise Bank</string>
    <string name="min_reps_dialog_text">Minimum reps:</string>
    <string name="max_reps_dialog_text">Maximum reps:</string>
    <string name="online_backup_title">Data backup and restore</string>
    <string name="number_of_sets">Number of sets:</string>
    <string name="testimonials_title">T.H.T. Before/After Pics</string>
    <string name="contribute_title">Contribute</string>
</resources>