<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/tracker_nav_graph"
    android:icon="@drawable/tracker_tab_icon"
    android:title="@string/cycle_tracker_title"/>

  <item
    android:id="@+id/book_nav_graph"
    android:icon="@drawable/ic_book_black_24dp"
    android:title="@string/training_manual_title"/>

  <item
    android:id="@+id/premium_nav_graph"
    android:icon="@drawable/ic_star_black_24dp"
    android:title="@string/navigation_products_text"
      app:showAsAction="ifRoom|withText" />

  <item
    android:id="@+id/blog_nav_graph"
    android:icon="@drawable/blog_icon"
    android:title="@string/blog_title"
      app:showAsAction="always|withText" />

  <item
    android:id="@+id/exercise_bank_nav_graph"
    android:icon="@drawable/bank_icon"
    android:title="@string/exercise_bank_title"/>

</menu>
