<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/seeExerciseTutorial"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/see_exercise_tutorial"
        android:visible="true"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/substituteExercise"
        android:icon="@drawable/ic_find_replace_black_24dp"
        android:title="@string/substitute_exercise"
        android:visible="true"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/skipDay"
        android:icon="@drawable/ic_skip_next_black_24dp"
        android:title="@string/skip_exercise"
        android:visible="true"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/skipDayUndo"
        android:icon="@drawable/ic_undo_black_24dp"
        android:title="@string/undo_skip_exercise"
        android:visible="false"
        android:showAsAction="ifRoom" />
</menu>