<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
  android:padding="10dip">
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/exercise_bank_info_1"
    android:padding="5dip"
    android:textSize="15sp"/>
<TextView
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:text="@string/exercise_bank_info_2"
  android:padding="5dip"
  android:textSize="15sp"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/exercise_bank_info_3"
    android:padding="5dip"
    android:textSize="15sp"/>

</LinearLayout>