<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/openNote"
    android:icon="@drawable/ic_edit_black_24dp"
    android:title="@string/rename"
    android:visible="true"
    android:showAsAction="always"/>

  <item
    android:id="@+id/changeCycleDurationOption"
    android:icon="@drawable/ic_timeline_black_24dp"
    android:title="@string/change_duration"
    android:visible="true"
    android:showAsAction="ifRoom"/>

  <item
    android:id="@+id/deleteCycleOption"
    android:icon="@drawable/ic_delete_black_24dp"
    android:title="@string/delete"
    android:visible="true"
    android:showAsAction="ifRoom"/>

  <!--<item-->
    <!--android:id="@+id/downloadCycleOption"-->
    <!--android:icon="@drawable/ic_file_download_black_24dp"-->
    <!--android:title="@string/download"-->
    <!--android:visible="true"-->
    <!--android:showAsAction="ifRoom"/>-->

</menu>