<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="5dip"
              android:orientation="vertical"
              android:padding="15dip">

  <TextView
    android:id="@+id/textView10"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/custom_or_bank_text"
    android:layout_gravity="center_horizontal"
    android:textSize="15sp"/>
  <!--android:onClick="openExerciseBank"-->
  <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_gravity="center_vertical">-->
  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/openExerciseBankButton"
    android:hint="@string/exercise_name_hint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginBottom="5dip"
      style="@style/Widget.AppCompat.Button.Colored"
      android:textColor="@color/white"
    android:text="@string/exercise_bank_button_text"/>


  <EditText
    android:id="@+id/exerciseNameTextBox"
    android:layout_width="match_parent"
    android:paddingTop="4dip"
    android:paddingBottom="4dip"
    android:layout_height="wrap_content"
    android:background="@drawable/input_text_border"
    android:ems="10"
    android:inputType="text"
    android:paddingRight="10dip"
    android:paddingEnd="10dip"
    android:paddingStart="10dip"
    android:paddingLeft="10dip"/>
  <!--</LinearLayout>-->


</LinearLayout>