<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="10dip"
              android:paddingStart="10dip"
              android:paddingRight="10dip"
              android:paddingEnd="10dip"
              android:layout_marginTop="5dip">
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:textSize="15sp"
    android:text="@string/enter_the_rep_range_for_this_set"/>
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/min_reps_dialog_text"/>
    <EditText
      android:id="@+id/minRepsTextBox"
      android:layout_width="50dip"
      android:layout_height="wrap_content"
      android:inputType="number"
      android:maxLength="2"
      android:background="@drawable/input_text_border"/>
  </LinearLayout>
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/max_reps_dialog_text"/>
    <EditText
      android:id="@+id/maxRepsTextBox"
      android:layout_width="50dip"
      android:layout_height="wrap_content"
      android:inputType="number"
      android:maxLength="2"
      android:background="@drawable/input_text_border"/>
  </LinearLayout>
</LinearLayout>