<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <data>
    <variable
        name="viewmodel"
        type="com.musclehack.targetedHypertrophyTraining.workoutTracker.edit.EditSetsViewModel" />
  </data>

  <ScrollView
      android:layout_height="wrap_content"
      android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:id="@+id/constraintLayout">

      <TextView
          android:id="@+id/textView10"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginStart="20dp"
          android:layout_marginTop="19dp"
          android:text="@string/custom_or_bank_text"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintLeft_toLeftOf="parent" />
      <!--android:onClick="openExerciseBank"-->

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/open_exercise_bank_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:layout_marginTop="16dp"
          android:text="@string/exercise_bank_button_text"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView10"
          style="@style/Widget.AppCompat.Button.Colored"
          android:textColor="@color/white"
          android:layout_marginRight="8dp" />

      <EditText
          android:id="@+id/exerciseNameText"
          android:layout_width="match_parent"
          android:layout_height="43dp"
          android:layout_marginEnd="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="8dp"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:background="@drawable/input_text_border"
          android:ems="10"
          android:hint="@string/exercise_name_hint"
          android:inputType="text"
          android:paddingEnd="5dip"
          android:paddingLeft="5dip"
          android:paddingRight="5dip"
          android:paddingStart="5dip"
          android:textColorHint="@drawable/selector"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/open_exercise_bank_button"
          android:text="@{viewmodel.selectedExerciseNameText}"/>

      <TextView
          android:id="@+id/textView11"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="28dp"
          android:text="@string/min_reps_text"
          app:layout_constraintLeft_toLeftOf="@+id/open_exercise_bank_button"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/exerciseNameText"
          android:layout_marginLeft="16dp" />

      <EditText
          android:id="@+id/minRepsText"
          android:layout_width="80dip"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:background="@drawable/input_text_border"
          android:hint="8"
          android:ems="10"
          android:inputType="number"
          android:padding="5dip"
          app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
          app:layout_constraintEnd_toEndOf="parent"
          android:textColorHint="@drawable/selector"
          android:layout_marginRight="16dp" />

      <TextView
          android:id="@+id/textView12"
          android:layout_width="175dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="44dp"
          android:text="@string/max_reps_text"
          app:layout_constraintLeft_toLeftOf="@+id/textView11"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView11"
          android:layout_marginLeft="16dp" />

      <EditText
          android:id="@+id/maxRepsText"
          android:layout_width="80dip"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:background="@drawable/input_text_border"
          android:ems="10"
          android:hint="12"
          android:inputType="number"
          android:padding="5dip"
          app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:textColorHint="@drawable/selector"
          android:layout_marginRight="16dp" />

      <TextView
          android:id="@+id/textView13"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="44dp"
          android:text="@string/rest_time_text"
          app:layout_constraintLeft_toLeftOf="@+id/textView12"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView12"
          android:layout_marginLeft="16dp" />

      <EditText
          android:id="@+id/restTimeText"
          android:layout_width="80dip"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:background="@drawable/input_text_border"
          android:ems="10"
          android:inputType="number"
          android:hint="120"
          android:padding="5dip"
          app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:textColorHint="@drawable/selector"
          tools:ignore="HardcodedText" />

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="44dp"
          android:text="@string/number_of_sets"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView13" />

      <EditText
          android:id="@+id/numberSetsText"
          android:layout_width="80dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:background="@drawable/input_text_border"
          android:text="1"
          android:ems="10"
          android:inputType="number"
          app:layout_constraintBottom_toBottomOf="parent"
          android:textColorHint="@drawable/selector"
          android:hint="1"
          android:padding="5dip"
          app:layout_constraintEnd_toEndOf="parent"
          tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>
</layout>
